--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
   <head></head>
   <body>
+
+    HEY CADE! 
     <div id='myPublisherDiv'></div>
     <div id='subscribersDiv'></div>
 
@@ -24,4 +26,4 @@
       });
     </script>
   </body>
-</html>      
+</html>
